Archive2/27/73cc8d2a92d4e7/output
main.cpp: In function 'int main()':
main.cpp:6:5: error: 'size_t' is not a member of 'std'
     std::size_t y = 1;  // error: 'size_t' is not a member of 'std'
     ^
main.cpp:6:17: error: expected ';' before 'y'
     std::size_t y = 1;  // error: 'size_t' is not a member of 'std'
                 ^
main.cpp:5:15: warning: unused variable 'x' [-Wunused-variable]
     my_size_t x   = 0;  // OK
               ^
